--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "v14.17.6"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
+
 }
